AC_INIT([libmedusa], [0.0.1])
AC_CONFIG_SRCDIR([src])
AC_CONFIG_FILES([Makefile])
AM_INIT_AUTOMAKE

AC_PROG_CXX
AC_PROG_AWK
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

AC_FUNC_MALLOC
AC_CHECK_FUNCS([bzero clock_gettime floor gethostname inet_ntoa memset select socket sqrt])

AC_TYPE_INT32_T
AC_TYPE_SIZE_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T
AC_TYPE_UINT8_T

AC_CHECK_HEADERS([arpa/inet.h netinet/in.h netinet/sctp.h stdint.h stdlib.h string.h sys/socket.h unistd.h])
AC_PROG_CC
AM_PROG_LIBTOOL
AC_OUTPUT 
